compiler/tests/fuzz/negative_corpus/check_duplicate_fn_name.mlc
fn duplicate_name() -> i32 = 1
fn duplicate_name() -> string = "second"